Fix icon in apps list, align to right

--- a/src/styles/modules/base.sass
+++ b/src/styles/modules/base.sass
@@ -259,6 +259,8 @@ a.btn-primary
     text-align: right
   .list-description, .list-date
     color: #a5a5a5
+  .list-icon
+    margin-left: auto
 
 .list-more
   border-top: 1px solid #e8e8e8
